Remove useless paragraph

--- a/_posts/2011-09-17-I18nFloat.markdown
+++ b/_posts/2011-09-17-I18nFloat.markdown
@@ -7,7 +7,7 @@ tags: ['ruby', 'comma', 'rails', 'gem', 'lib', 'software', 'oss', 'release', 'de
 
 [I18nFloat](https://bitbucket.org/Bounga/i18nfloat/) is a [Ruby](http://www.ruby-lang.org) gem to use with Rails. I18nFloat allows your users to use format number like "1 200,84" in forms. ActiveRecord Float attributes don't care anymore if you like commas or dots!.
 
-I often use URL shortener services and I was like "It would be cool if I could use it in Textmate, in my Ruby code or on the command-line!" so I wrote this thin lib to be able to do that.
+With this gem loaded, you're users are able to use comma style decimal in forms.
 
 Features
 ========
