--- a/_posts/2011-09-17-I18nFloat.markdown
+++ b/_posts/2011-09-17-I18nFloat.markdown
@@ -12,7 +12,7 @@ With this gem loaded, your users are able to use comma style decimal in forms.
 Features
 ========
 
-Here is current features but ideas and contributions are welcome:
+Here are current features but ideas and contributions are welcome:
 
 - comma for decimals
 - whitespace as separator
