Add header images to posts

--- a/_posts/2011-09-17-I18nFloat.md
+++ b/_posts/2011-09-17-I18nFloat.md
@@ -1,7 +1,9 @@
 ---
 title: I18nFloat - Allow comma style decimals for ActiveRecord attributes
-category: Free Software
-tags: ['lib', 'release']
+category: Projects
+tags: ['lib', 'release', 'open source']
+header:
+  overlay_image: /assets/images/headers/projects.jpg
 ---
 
 [I18nFloat](https://bitbucket.org/Bounga/i18nfloat/) is a [Ruby](http://www.ruby-lang.org) gem to use with Rails. I18nFloat allows your users to use format number like "1 200,84" in forms. ActiveRecord Float attributes don't care anymore if you like commas or dots!.
